fix(app): Correction de tout les .env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,8 +8,7 @@ APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
 APP_FAKER_LOCALE=fr_FR
 
-# FRONTEND_URL=http://localhost:5173 # Quand l'application est en développement
-FRONTEND_URL=https://taskforge-front.onrender.com # Quand l'application est en production
+FRONTEND_URL=http://localhost:5173
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
