fix(app): Correction des deux .env.example

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,9 @@
 # URL de l'API Laravel
-# Obligatoire pour que React sache à quelle adresse faire les appels API
-
 VITE_API_BASE_URL=http://localhost:8000
 
-# (optionnel pour le futur)
-# VITE_ACCESS_TOKEN=super-secret-token
+# Optionnel : utilisé par le middleware global Laravel si activé
+# VITE_ACCESS_TOKEN=
 
-# (optionnel si tu veux transmettre des infos front → back)
+# Autres options possibles pour plus tard
 # VITE_APP_NAME=TaskForge
 # VITE_APP_THEME=light
