fix(app + route-backend): Correction du .gitignore + Suppresion de la route des logs et ping

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=TaskForge
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qJcEIlEeX/AHjglW2NtHjwRBcJpKrT7MXcmm8JVHMQk= 
 APP_DEBUG=true
 APP_URL=http://localhost
 
