fix(app): Update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,16 +42,12 @@ jobs:
           composer install --no-interaction --prefer-dist --optimize-autoloader
 
       # ⚙️ Copie .env.example en .env + génère la clé
-      - name: Setup Laravel environment
+      - name: Run tests (PHPUnit)
         run: |
           cd backend
-          cp .env.example .env
-          php artisan key:generate
+          php artisan migrate
+          php artisan test
         env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_DATABASE: taskforge
-          DB_USERNAME: root
           DB_PASSWORD: root
 
       # 🧪 Lance les migrations et les tests
