feat(app): Création d'une logique docker avec un Makefile pour un raccourcis des commandes dans le docker en restant sur son propre terminal

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,9 @@
 # URL de l'API Laravel
+# Obligatoire pour que React sache à quelle adresse faire les appels API
+
 VITE_API_BASE_URL=http://localhost:8000
 
-# Optionnel : utilisé par le middleware global Laravel si activé
-# VITE_ACCESS_TOKEN=
+VITE_APP_LOCKED=true #Permet de bloquer l'accès à l'application pendant le développement
+VITE_APP_ACCESS_TOKEN=t0k3n_dev_secret #Code pour débloquer l'application
 
-# Autres options possibles pour plus tard
-# VITE_APP_NAME=TaskForge
-# VITE_APP_THEME=light
+VITE_APP_NAME=TaskForge
