--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=TaskForge
 APP_ENV=local
-APP_KEY=base64:qJcEIlEeX/AHjglW2NtHjwRBcJpKrT7MXcmm8JVHMQk= 
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,6 +8,8 @@ APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
 APP_FAKER_LOCALE=fr_FR
 
+APP_LOCKED=true
+ACCESS_TOKEN=t0k3n_dev_secret
 FRONTEND_URL=http://localhost:5173
 
 APP_MAINTENANCE_DRIVER=file
